# palettethief-rs

./: CHANGELOG.md  Cargo.toml  LICENSE_MIT.md  README.md
.github/workflows/: archlinux_release.yml  rust.yml
archlinux/: PKGBUILD
src/: main.rs
