[package]
name = "palettethief"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "command-line"]
readme = "README.md"
repository = "https://github.com/walker84837/palettethief-rs"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
color-thief = "0.2.2"
image = "0.25.2"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
simple_logger = "5.0.0"
thiserror = "2.0.3"
